--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@ nam in minim voluptatibus.
       </div>
     </section>
     <footer>
-      <h5>copyright &copy; 2019 by Sanbercode</h5>
+      <h5>copyright &copy; 2019 by pks digital school</h5>
     </footer>
   </body>
 </html>
